[project]
name = "lmstone"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "psycopg2-binary>=2.9.10",
    "redis>=6.4.0",
    "django-allauth>=65.11.2",
    "django-guardian>=3.2.0",
    "drf-spectacular>=0.28.0",
    "pillow>=11.3.0",
    "django-storages>=1.14.6",
    "boto3>=1.40.40",
    "celery>=5.5.3",
    "django-celery-beat>=2.8.1",
    "django-celery-results>=2.6.0",
    "python-decouple>=3.8",
    "django-environ>=0.12.0",
    "django-crispy-forms>=2.4",
    "crispy-bootstrap4>=2025.6",
    "django-admin-interface>=0.30.1",
    "django-import-export>=4.3.10",
    "django-ckeditor>=6.7.3",
    "django-mptt>=0.18.0",
    "django-taggit>=6.1.0",
    "django-anymail>=13.1",
    "gunicorn>=23.0.0",
    "whitenoise>=6.11.0",
    "django-health-check>=3.20.0",
    "django-prometheus>=2.4.1",
    "prometheus-client>=0.23.1",
    "django-filter>=25.1",
    "django-modeltranslation>=0.19.17",
    "django-countries>=7.6.1",
    "python-slugify>=8.0.4",
    "django-ratelimit>=4.1.0",
    "django-csp>=4.0",
    "django-permissions-policy>=4.28.0",
#]
#[project.optional-dependencies]
#dev = [
    # Development Tools
    "django-debug-toolbar>=4.2.0",
    "django-extensions>=3.2.3",

    # Code Quality & Linting
    "black>=23.10.1",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "django-stubs>=4.2.6",
    "pre-commit>=3.5.0",

    # Testing
    "pytest>=7.4.3",
    "pytest-django>=4.6.0",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
    "coverage>=7.3.2",

    # Database Tools
    "django-seed>=0.3.1",

    # Documentation
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=1.3.0",

    # Performance Profiling
    "django-silk>=5.0.4",
    "memory-profiler>=0.61.0",

    # API Testing
    "httpx>=0.25.2",
#]

#production = [
    # Monitoring & Observability
    "structlog>=23.2.0",
    "django-structlog>=8.0.0",

    # Additional production dependencies
    "newrelic>=9.2.0",
    #"uwsgi>=2.0.23",
#]

#video = [
    # Video processing (optional feature)
    "django-video-encoding>=1.0.0",
    "ffmpeg-python>=0.2.0",
#]

#search = [
    # Search functionality (can add later)
    "django-elasticsearch-dsl>=7.3.0",
    "elasticsearch-dsl>=7.4.0",
]

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

#[tool.uv]
#dev-dependencies = [
#    "django-lms[dev]"
#]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.production"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = "."
omit = [
    "*/migrations/*",
    "*/venv/*",
    "*/tests/*",
    "manage.py",
    "*/settings/*",
    "*/static/*",
    "*/media/*",
]